Agregue el boton de submit al formulario de registro

--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -76,6 +76,10 @@
 				<label>Repetir contraseña </label>
 				<input type="password" name="pass2" class="form-control">
 		</div>
+		<div>
+			<input class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">
+		</div>
+
 	</form>
 </div>
 </div>
