--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navigation></app-navigation>
+
 <div class="container p-4">
-    <registerform></registerform>    
+    <router-outlet></router-outlet>    
 </div>
