--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -13,7 +13,8 @@
                     <input type="password" name="pass" class="form-control">
             </div>
             <div>
-                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Login">
+                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Iniciar Sesion">
+                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Registrarse">
             </div>
         </form>
     </div>
