--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -11,6 +11,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/login">Iniciar sesion</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/order">Cargar Orden</a>
+        </li>
       </ul>
     </div>
   </nav>
