Arreglo en Order component, agregado de estilos bootstrap, navigation href reemplazados por routerlink

--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -1,22 +1,49 @@
+<div class="col-md-6 offset-md-3">
+    <div class="card">
+        <div class="card-header">
+            <h3>Formulario de carga</h3>
+        </div>
+        <div class="card-body">
+            <form action="#">
+                <div class="form-group">
+                    <label>Elegir medico</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label>Tipo de orden:   </label>
+                    <select class="form-control">
+                        <option value="analisis">Analisis</option>
+                        <option value="medicamento">Medicamento</option>
+                        <option value="tratamiento">Tratamiento</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Adjuntar orden:   </label>
+                    <br>
+                    <input type="file" class="">
+                </div>
+                <div class="form-group">
+                    <label>Estado:  </label>
+                    <select disabled="true" class="form-control">
+                        <option value="pendiente">Pendiente</option>
+                        <option value="aceptada">Aceptada</option>
+                        <option value="rechazada">Rechazada</option>
+                    </select>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
-<label>Formulario de carga </label> 
-</br>
-<label>Elegir medico</label>
-<input type="text">
-</br>
-<label>Tipo de orden:   </label>
-    <select>
-        <option value="analisis">Analisis</option>
-        <option value="medicamento">Medicamento</option>
-        <option value="tratamiento">Tratamiento</option>
-    </select>
-</br>
-<label>Adjuntar orden:   </label>
-<input type="file">
-</br>
-<label>Estado:  </label>
-    <select disabled="true">
-        <option value="pendiente">Pendiente</option>
-        <option value="aceptada">Aceptada</option>
-        <option value="rechazada">Rechazada</option>
-    </select>
+
+
+
+
+
+
+
+
+
+
+
+
