--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -9,10 +9,10 @@
           <a class="nav-link" routerLink="/register" routerLinkActive="active">Registro</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login">Iniciar sesion</a>
+          <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar sesion</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/order">Cargar Orden</a>
+          <a class="nav-link" routerLink="/order" routerLinkActive="active">Cargar Orden</a>
         </li>
       </ul>
     </div>
