Agregue y ordene los botones

--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -12,9 +12,13 @@
                     <label>Contraseña: </label>
                     <input type="password" name="pass" class="form-control">
             </div>
-            <div>
-                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Iniciar Sesion">
-                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Registrarse">
+            <div class="col text-center">
+                <div class="btn-group mr-2">
+                    <button type="button" class="btn btn-lg btn-primary">Iniciar Sesion</button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary btn-lg">Registrarse</button>
+                </div>
             </div>
         </form>
     </div>
