--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3">
+            <div class="col-md-6 offset-md-3">
     <div class="card">
         <div class="card-header">
             <h3>Formulario de carga</h3>
@@ -31,6 +31,9 @@
                     </select>
                 </div>
             </form>
+            <div class="col text-center">
+                <button type="button" class="btn btn-lg btn-primary">Cargar orden</button>
+            </div>
         </div>
     </div>
 </div>
