--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -1,4 +1,4 @@
-            <div class="col-md-6 offset-md-3">
+<div class="col-md-6 offset-md-3">
     <div class="card">
         <div class="card-header">
             <h3>Formulario de carga</h3>
@@ -7,7 +7,7 @@
             <form action="#">
                 <div class="form-group">
                     <label>Tipo de orden:   </label>
-                    <select class="form-control">
+                    <select [(ngModel)]="order.tipo" [ngModelOptions]="{standalone: true}" class="form-control">
                         <option value="analisis">Analisis</option>
                         <option value="medicamento">Medicamento</option>
                         <option value="tratamiento">Tratamiento</option>
@@ -16,20 +16,15 @@
                 <div class="form-group">
                     <label>Adjuntar orden:   </label>
                     <br>
-                    <input type="file" class="">
+                    <input [(ngModel)]="order.data" [ngModelOptions]="{standalone: true}" type="file" class="">
                 </div>
             </form>
             <div class="col text-center">
-                <button type="button" class="btn btn-lg btn-primary">Cargar orden</button>
+                <button type="button" class="btn btn-lg btn-primary"(click)="saveOrder()">Cargar orden</button>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
 
 
 
