Arreglo del listar ordern en verOrder

--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col text-center">
                 <div class="btn-group mr-2">
-                    <button type="button" class="btn btn-lg btn-primary">Iniciar Sesion</button>
+                    <button type="button" class="btn btn-lg btn-primary" (click)="login()">Iniciar Sesion</button>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary btn-lg">Registrarse</button>
