--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -16,7 +16,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
-        </li> 
+        </li>
+        <li class="nav-item" *ngIf="user.is_admin == true">
+          <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
+        </li>  
       </ul>
     </div>
   </nav>
