--- a/frontend/src/app/components/ver-orden/ver-orden.component.html
+++ b/frontend/src/app/components/ver-orden/ver-orden.component.html
@@ -79,7 +79,6 @@
     </div> <!--cad body -->
   </div>
   <div>
-      <div *ngIf="test else loading">
         <table  id="dtBasicExample" class="table table-striped table-bordered table-sm well well-sm " cellspacing="0" width="100%">
           <thead>
             <tr>
@@ -97,23 +96,16 @@
           </thead>
           <tbody>
           <tr *ngFor="let order of orders">
-            <th scope="row"></th>
-            <td>{{ order.fecha }}</td>
+            <th scope="row">{{ order.fecha }}</th>
             <td>{{ order.tipo }}</td>
             <td>{{ order.estado}}</td>
+            <td></td>
             <td>
               <button type="button" class="btn btn-indigo btn-sm m-0">Ver Más</button>
             </td>
           </tr>
           </tbody>
         </table>
-    </div>
-    <ng-template #loading>
-      <div class="text-center">
-        <h2>No tiene ninguna order cargada</h2>
-        <br/>
-      </div>
-    </ng-template>
   </div>
 </body>
 </html>
