Branch para probar la carga de imagen

--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -20,7 +20,7 @@
                 </div>
             </form>
             <div class="col text-center">
-                <button type="button" class="btn btn-lg btn-primary"(click)="saveOrder()">Cargar orden</button>
+                <button type="button" class="btn btn-lg btn-primary"(click)="saveOrder()" (click)="subirArchivo()">Cargar orden</button>
             </div>
         </div>
     </div>
