Modificacion del Ver medico, modals, y organizacion del index

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li> 
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Médico</a>
+        </li> 
       </ul>
     </div>
   </nav>
