--- a/frontend/src/app/components/medico-mod-ord/medico-mod-ord.component.html
+++ b/frontend/src/app/components/medico-mod-ord/medico-mod-ord.component.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
-<head>
+ <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -16,8 +16,8 @@
     $(document).ready(function(){
       /*  
       $('#divMiCalendario').datetimepicker({
-         format: 'YYYY-MM-DD '       <!-- HH:mm -->
-      });
+         format: 'YYYY-MM-DD '         HH:mm -->
+     <!-- });
       $('#divMiCalendario').data("DateTimePicker").show();  
       */
       $('#datetimepicker1').datetimepicker({
@@ -28,8 +28,8 @@
       }); 
     }); 
   </script>
-</head>
-<body>
+</head> 
+<body>-->
   <div class="container-fluid">
     <div class="card-header">
       <h3>Ver Ordenes Medico</h3>
@@ -94,12 +94,12 @@
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Seguro de aplicar cambios? </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" id="modal-btn-si">Si</button>
-        <button type="button" class="btn btn-primary" id="modal-btn-no" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="myModal" data-dismiss="modal" id="modal-btn-si">Si</button>
+        <button type="button" class="btn btn-danger" id="modal-btn-no" data-dismiss="modal" data-toggle="modal" data-target="#myModal">No</button>
       </div>
     </div>
   </div>
@@ -113,30 +113,27 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
+            <h4 class="modal-title">Modal Orden Detalle</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Orden Detalle</h4>
-        </div>
-        <div class="modal-body">
+      </div>
+        <div class="modal-body"> 
           <p>Detalle Modal</p>
           <div class="card-body">
       <div class="well well-lg">
-        <form class="form-inline" role="form">
-          <legend class="text-center">Detalle Usuario</legend>
-            <label>Nombre y Apellido: </label>
-            <br>
-            <label>Número de Afiliado: </label>
-            <br>
-            <label>Tipo de Afiliado: </label>
-            <br>
+        <form role="form">
+          <ul class="list-group">Detalle Usuario:</ul>
+            <li class="list-group-item">Nombre y Apellido: </li>
+            <li class="list-group-item">Número de Afiliado: </li>
+            <li class="list-group-item">Tipo de Afiliado: </li>
           <button type="button" class="btn btn-link">Ver más</button>
           </form>
           </div>
        </div>   
-          <tr *ngFor="let order of orders">
+          <tr>
             <th scope="row"></th>
-            <td>{{ order.fecha }}</td>
-            <td>{{ order.tipo }}</td>
-            <td>{{ order.estado}}</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>
             </tr>
             <br>
@@ -165,7 +162,7 @@
   				<textarea id="form18" class="form-control" rows="3"></textarea>
 				</div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default"  data-dismiss="modal" data-toggle="modal" data-target="#aplibtn">Aplicar</button>
+          <button type="button" class="btn btn-primary"  data-dismiss="modal" data-toggle="modal" data-target="#aplibtn">Aplicar</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
         </div>
       </div> <!-- Cerrar modal -->
@@ -176,7 +173,6 @@
 </div>
 
   <div>
-      <div *ngIf="test else loading">
         <table  id="dtBasicExample" class="table table-striped table-bordered table-sm well well-sm " cellspacing="0" width="100%">
           <thead>
             <tr>
@@ -195,11 +191,11 @@
             </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let order of orders">
+          <tr>
             <th scope="row"></th>
-            <td>{{ order.fecha }}</td>
-            <td>{{ order.tipo }}</td>
-            <td>{{ order.estado}}</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>
               <button type="button" class="btn btn-indigo btn-sm m-0">Ver Adjunto</button>
             </td>
@@ -207,17 +203,14 @@
             <button class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">
 <span class="glyphicon glyphicon-pencil"></span>
 </button>
+
+    
+
             </td>
           </tr>
           </tbody>
         </table>
-    </div>
-    <ng-template #loading>
-      <div class="text-center">
-        <h2>No tiene ninguna order cargada</h2>
-        <br/>
-      </div>
-    </ng-template>
   </div>
-</body>
-</html>
+
+
+
