--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -6,11 +6,11 @@
         <form class="card-body">
             <div class="form-group">
                     <label>Correo electronico: </label>
-                    <input type="email" name="email" class="form-control">
+                    <input [(ngModel)]="user.email" type="email" name="email" class="form-control">
             </div>
             <div class="form-group">
                     <label>Contraseña: </label>
-                    <input type="password" name="pass" class="form-control">
+                    <input [(ngModel)]="user.password" type="password" name="password" class="form-control">
             </div>
             <div class="col text-center">
                 <div class="btn-group mr-2">
