--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -17,9 +17,12 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li>
-        <li class="nav-item" *ngIf="user.is_admin == true">
-          <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
-        </li>  
+        <li class="nav-item" *ngIf="isMedico == true">
+          <a class="nav-link" routerLink="/verorden" routerLinkActive="active">MEDICO</a>
+        </li>
+        <li class="nav-item" *ngIf="user">
+          <a class="nav-link" routerLink="/" routerLinkActive="active" (click)="logout()">Cerra sesion</a>
+        </li>    
       </ul>
     </div>
   </nav>
