--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -5,27 +5,24 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
+      <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/register" routerLinkActive="active">Registro</a>
-        </li>
-        <li class="nav-item">
+        </li> --> 
+        <li class="nav-item" *ngIf="!user">
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar sesion</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="user">
           <a class="nav-link" routerLink="/order" routerLinkActive="active">Cargar Orden</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="user">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li>
         <li class="nav-item" *ngIf="isMedico == true">
-          <a class="nav-link" routerLink="/verorden" routerLinkActive="active">MEDICO</a>
+          <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Médico</a>
         </li>
         <li class="nav-item" *ngIf="user">
           <a class="nav-link" routerLink="/" routerLinkActive="active" (click)="logout()">Cerra sesion</a>
         </li>    
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Médico</a>
-        </li> 
       </ul>
     </div>
   </nav>
