--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -16,11 +16,11 @@
                 <div class="form-group">
                     <label>Adjuntar orden:   </label>
                     <br>
-                    <input [(ngModel)]="order.data" [ngModelOptions]="{standalone: true}" type="file" class="">
+                    <input (change)="onFileSelected($event)" type="file" class="">
                 </div>
             </form>
             <div class="col text-center">
-                <button type="button" class="btn btn-lg btn-primary"(click)="saveOrder()">Cargar orden</button>
+                <button type="button" class="btn btn-lg btn-primary"(click)="onUpload()">Cargar orden</button>
             </div>
         </div>
     </div>
