--- a/frontend/src/app/components/ver-orden/ver-orden.component.html
+++ b/frontend/src/app/components/ver-orden/ver-orden.component.html
@@ -99,7 +99,7 @@
             <th scope="row">{{ order.fecha }}</th>
             <td>{{ order.tipo }}</td>
             <td>{{ order.estado}}</td>
-            <td></td>
+            <td><a href="{{ order.data}}">Ver</a></td>
             <td>
               <button type="button" class="btn btn-indigo btn-sm m-0">Ver Más</button>
             </td>
