--- a/frontend/src/app/components/login-form/login-form.component.html
+++ b/frontend/src/app/components/login-form/login-form.component.html
@@ -17,7 +17,7 @@
                     <button type="button" class="btn btn-lg btn-primary" (click)="login()">Iniciar Sesion</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" class="btn btn-primary btn-lg">Registrarse</button>
+                    <button routerLink="/register" routerLinkActive="active" type="button" class="btn btn-primary btn-lg">Registrarse</button>
                 </div>
             </div>
         </form>
