--- a/frontend/src/app/components/medico-mod-ord/medico-mod-ord.component.html
+++ b/frontend/src/app/components/medico-mod-ord/medico-mod-ord.component.html
@@ -1,36 +1,4 @@
-<!--<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.js"></script> 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" > 
-  <script type="text/javascript">
-    $(document).ready(function(){
-      /*  
-      $('#divMiCalendario').datetimepicker({
-         format: 'YYYY-MM-DD '         HH:mm -->
-     <!-- });
-      $('#divMiCalendario').data("DateTimePicker").show();  
-      */
-      $('#datetimepicker1').datetimepicker({
-       format: 'DD-MM-YY'
-      });
-      $('#datetimepicker2').datetimepicker({
-       format: 'DD-MM-YY'
-      }); 
-    }); 
-  </script>
-</head> 
-<body>-->
-  <div class="container-fluid">
+<div class="container-fluid">
     <div class="card-header">
       <h3>Ver Ordenes Medico</h3>
     </div>
@@ -184,6 +152,8 @@
               </th>
               <th class="th-sm">Estado
               </th>
+              <th class="th-sm">Observacion
+              </th>
               <th class="th-sm ">Orden Adjunta <span class="glyphicon glyphicon-paperclip"></span>
               </th>
               <th class="th-sm">Editar <span class="glyphicon glyphicon-pencil"></span>
@@ -191,23 +161,24 @@
             </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let order of orders">
+          <tr *ngFor="let order of orders" >
             <th scope="row">{{ order.user_id }}</th>
-            <td>{{ order.fecha }}</td>
+            <td>{{ order.fecha | date: 'yyyy-MM-dd'}}</td>
             <td>{{ order.tipo }}</td>
-            <td>{{ order.estado }}</td>
+            <td><p [ngClass]="{'btn-primary':order.estado=='Pendiente','btn-success':order.estado=='aceptada','btn-danger':order.estado=='rechazada'}">{{ order.estado }}</p></td>
+            <td>{{ order.observacion }}</td>
             <td>
               <a href="{{ order.data }}" class="btn btn-indigo btn-sm m-0">Ver Adjunto</a>
             </td>
             <td>
-            <button class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal" (click)="modOrder(order.id)">
+            <button (click)="modOrder(order.id)" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal" >
               <span class="glyphicon glyphicon-pencil"></span>
             </button>
             </td>
           </tr>
           </tbody>
         </table>
-  </div>
+</div>
 
 
 
