--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,13 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/home" routerLinkActive="active">Obra Social</a>
+    <a class="navbar-brand" routerLink="/home" routerLinkActive="active">OSME</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-      <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="/register" routerLinkActive="active">Registro</a>
-        </li> --> 
         <li class="nav-item" *ngIf="!user">
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar sesion</a>
         </li>
@@ -34,6 +31,5 @@
         </li> 
       </div>
       </ul>       
-      
     </div>
   </nav>
