--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -14,6 +14,11 @@
         </li>
         </div>
         <div *ngIf="user">
+          <li class="nav-item" *ngIf="isMedico !== true">
+            <a class="nav-link" routerLink="/cartilla" routerLinkActive="active">Cargar Cartilla</a>
+          </li>
+        </div>
+        <div *ngIf="user">
         <li class="nav-item" *ngIf="isMedico !== true">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li>
