--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -13,11 +13,11 @@
           <a class="nav-link" routerLink="/order" routerLinkActive="active">Cargar Orden</a>
         </li>
         </div>
-        <div *ngIf="user">
-          <li class="nav-item" *ngIf="isMedico !== true">
+    
+          <li class="nav-item" *ngIf="!user">
             <a class="nav-link" routerLink="/cartilla" routerLinkActive="active">Cargar Cartilla</a>
           </li>
-        </div>
+       
         <div *ngIf="user">
         <li class="nav-item" *ngIf="isMedico !== true">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
