--- a/frontend/src/app/components/multiple-form-obs/multiple-form-obs.component.html
+++ b/frontend/src/app/components/multiple-form-obs/multiple-form-obs.component.html
@@ -12,20 +12,34 @@
                 <option value="Farmacia">Farmacia</option>
                 <option value="Medico">Medico</option>
             </select>
-        
+        <br>
 
         <div *ngIf="cartilla.tipo === 'Medicamento'">
             <label>Nombre: </label>   
-            <input [(ngModel)]="cartilla.nombre" [ngModelOptions]="{standalone: true}"  type="text">
+            <input [(ngModel)]="cartilla.nombre" [ngModelOptions]="{standalone: true}"  type="text" class="form-control">
+            <br>
+            <input class="btn btn-primary btn-lg btn-block" type="submit" value="Agregar Medicamento">
         </div> 
-        <div *ngIf="cartilla.tipo === 'Hospital'">
+        <div *ngIf="cartilla.tipo === 'Hospital' || cartilla.tipo === 'Farmacia'">
                 <label>Nombre: </label>
                 <input type="text" [(ngModel)]="cartilla.nombre" type="text" [ngModelOptions]="{standalone: true}" class="form-control">
                 <label>Direccion:</label> 
                 <input type="text" [(ngModel)]="cartilla.direccion" type="text" [ngModelOptions]="{standalone: true}" class="form-control">
+                <label>Telefono:</label> 
+                <input type="text" [(ngModel)]="cartilla.telefono" type="text" [ngModelOptions]="{standalone: true}" class="form-control">
+                <br>
+                <input *ngIf="cartilla.tipo === 'Farmacia'" class="btn btn-primary btn-lg btn-block" type="submit" value="Agregar Farmacia">
+                <input *ngIf="cartilla.tipo === 'Hospital'" class="btn btn-primary btn-lg btn-block" type="submit" value="Agregar Hospital">
         </div>
         <div *ngIf="cartilla.tipo === 'Medico'">
-                <!---<registerform></registerform> -->
+            <label>Nombre: </label>
+            <input type="text" [(ngModel)]="cartilla.nombre" type="text" [ngModelOptions]="{standalone: true}" class="form-control">
+            <label>Especialidad:</label> 
+            <input type="text" class="form-control">
+            <label>Hospital:</label> 
+            <input type="text" class="form-control"> <!-- Aca seria un select de Hospitales-->
+            <br>
+            <input class="btn btn-primary btn-lg btn-block" type="submit" value="Agregar Medico">
         </div>
         </form>
     </div>
