H3 - Se crearon nuevas tablas para los medicos y para los contenidos de la cartilla. Se modifico el login para que puedan existir 3 roles (usuario, medico y admin). Se agrego el campo medico en CargarOrden del paciente que lista todos los medicos de la tabla medicos.

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -9,23 +9,23 @@
           <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar sesion</a>
         </li>
         <div *ngIf="user">
-        <li class="nav-item" *ngIf="isMedico !== true">
+        <li class="nav-item" *ngIf="isUser == true">
           <a class="nav-link" routerLink="/order" routerLinkActive="active">Cargar Orden</a>
         </li>
         </div>
-    
-          <li class="nav-item" *ngIf="!user">
+        <div>
+          <li class="nav-item" *ngIf="isAdmin == true">
             <a class="nav-link" routerLink="/cartilla" routerLinkActive="active">Cargar Cartilla</a>
           </li>
-       
+        </div>
         <div *ngIf="user">
-        <li class="nav-item" *ngIf="isMedico !== true">
+        <li class="nav-item" *ngIf="isUser == true">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li>
         </div>
         <div>
         <li class="nav-item" *ngIf="isMedico == true">
-          <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Médico</a>
+          <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Autorizar Ordenes</a>
         </li>
       </div>
     </ul>
