--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -14,6 +14,12 @@
                     </select>
                 </div>
                 <div class="form-group">
+                    <label>Medico:   </label>
+                    <select class="form-control">
+                        <option *ngFor="let medico of medicos">{{ medico.nombre }}</option>
+                    </select>
+                </div>
+                <div class="form-group">
                     <label>Adjuntar orden:   </label>
                     <br>
                     <input (change)="onFileSelected($event)" type="file" class="">
