H3 - Se agrego el servicio y model Medico en el front, junto con la logica en el back para listar y agregar medicos, que despues seran mostrados en la cartilla

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -32,9 +32,14 @@
     <ul class="nav navbar-nav navbar-right">
       <div>
         <li class="nav-item" *ngIf="user">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" (click)="logout()">Cerra sesion</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active" (click)="logout()">Cerrar sesion</a>
         </li> 
       </div>
-      </ul>       
+        <div>
+          <li class="nav-item" *ngIf="isUser == true">
+            <a class="nav-link" routerLink="/" routerLinkActive="active"> {{ name }} </a>
+          </li> 
+      </div>
+    </ul>    
     </div>
   </nav>
