--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -23,6 +23,11 @@
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
         </li>
         </div>
+        <div *ngIf="user">
+          <li class="nav-item" *ngIf="isUser == true">
+            <a class="nav-link" routerLink="/verCartilla" routerLinkActive="active">Cartilla</a>
+          </li>
+          </div>
         <div>
         <li class="nav-item" *ngIf="isMedico == true">
           <a class="nav-link" routerLink="/verMed" routerLinkActive="active">Autorizar Ordenes</a>
