--- a/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
+++ b/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
@@ -3,48 +3,59 @@
     <div class="card-body" >
 
 		<div class="card-header  bg-secondary text-white">
-            <h3>Agregar médico </h3>
+            <h3 class="text-center">Agregar médico </h3>
         </div>  
-
+		<br>
 	<div class="form-row" >
             <div class="form-group col-md-4">
-                <label for="Nombre">Nombre y Apellido</label>
-                <input type="text" name="name" class="form-control" placeholder="Patricia Quiroga" required autofocus>
+                <label>Nombre y Apellido :</label>
+                <input type="text" [(ngModel)]="medico.nombre" name="name" class="form-control" placeholder="Patricia Quiroga" required autofocus>
             </div>
 
             <div class="form-group col-md-4">            
-                <label for="Cuit">Cuit</label>
-                <input type="text" name="Cuit" class="form-control" placeholder="20398804050" required autofocus>
+                <label>CUIT :</label>
+                <input type="text" [(ngModel)]="medico.cuit" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="20398804050" required autofocus>
             </div>
 
             <div class="form-group col-md-4">            
-                <label for="Cuit">Matricula</label>
-                <input type="text" name="Matricula" class="form-control" placeholder="" required autofocus>
+                <label>Matricula :</label>
+                <input type="text" [(ngModel)]="medico.matricula" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="" required autofocus>
             </div>
 
             <div class="form-group col-md-4">            
-                <label for="Cuit">Hospital</label>
-                <input type="text" name="Cuit" class="form-control" placeholder="San Martin">
+                <label>Hospital :</label>
+				<select [(ngModel)]="medico.hospital" [ngModelOptions]="{standalone: true}" class="form-control">
+					<option *ngFor="let hospital of hospitales">{{ hospital.nombre }}</option>
+				</select>
             </div>
 
             <div class="form-group col-md-4 field-label-responsive">            
-                <label for="Cuit">Email de acceso</label>
-                 <input type="text" name="emailAddress" id="email" class="form-control" placeholder="you@Osme.com" required autofocus>
+                <label>Email de acceso :</label>
+                 <input type="text" [(ngModel)]="medico.correo" name="correo" class="form-control" placeholder="you@Osme.com" required autofocus>
 
             </div>
 
            <div class="form-group col-md-4">            
-               <label >Especialidad:</label>
+               <label >Especialidad :</label>
 	            <select class="form-control">
     	            <option value="selec">seleccionar..</option>
         	        <option value="Medicamento">Clinico</option>
             	    <option value="Hospital">Traumatologo</option>
                 	<option value="Farmacia">Analisis</option>
             	</select>
-            </div>
 			</div>
-        
-            <button type="submit" class="btn btn-primary"  data-dismiss="modal" data-toggle="modal" data-target="#Guardarbtn">
+			<div class="form-group col-md-4">
+				<label>Contraseña :</label>
+				<input type="password" [(ngModel)]="medico.password" name="password" class="form-control" placeholder="password" required autofocus>
+			</div>
+			<div class="form-group col-md-4">	
+				<label>Confirmar contraseña :</label>
+				<input type="password" name="password2" class="form-control" placeholder="confirmar contraseña" required autofocus>			
+			</div>
+			<br>
+			</div>
+			
+			<button type="submit" class="btn btn-primary btn-lg btn-block" (click)="saveNewMedico()" data-dismiss="modal" data-toggle="modal" data-target="#Guardarbtn">
                   Guardar</button>
 		   	                    </div>
 
@@ -70,7 +81,7 @@ fields: {
 			}
 		}
 		},
-	emailAddress: {
+	correo: {
 		validators: {
 			stringLength: {
 				min: 15,
