--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -18,6 +18,11 @@
             <a class="nav-link" routerLink="/cartilla" routerLinkActive="active">Cargar Cartilla</a>
           </li>
         </div>
+        <div>
+          <li class="nav-item" *ngIf="isAdmin == true">
+            <a class="nav-link" routerLink="/formularioMed" routerLinkActive="active">Cargar Medico</a>
+          </li>
+        </div>       
         <div *ngIf="user">
         <li class="nav-item" *ngIf="isUser == true">
           <a class="nav-link" routerLink="/verorden" routerLinkActive="active">Ver Orden</a>
