--- a/frontend/src/app/components/order-form/order-form.component.html
+++ b/frontend/src/app/components/order-form/order-form.component.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="form-group">
                     <label>Medico:   </label>
-                    <select class="form-control">
+                    <select [(ngModel)]="order.medico" [ngModelOptions]="{standalone: true}" class="form-control">
                         <option *ngFor="let medico of medicos">{{ medico.nombre }}</option>
                     </select>
                 </div>
