--- a/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
+++ b/frontend/src/app/components/formulario-carga-medico/formulario-carga-medico.component.html
@@ -1,101 +1,199 @@
-
-<div class="col-md-6 offset-md-3">
-    <div class="card-body" >
-
-		<div class="card-header  bg-secondary text-white">
-            <h3 class="text-center">Agregar médico </h3>
-        </div>  
-		<br>
-	<div class="form-row" >
-            <div class="form-group col-md-4">
-                <label>Nombre y Apellido :</label>
-                <input type="text" [(ngModel)]="medico.nombre" name="name" class="form-control" placeholder="Patricia Quiroga" required autofocus>
-            </div>
-
-            <div class="form-group col-md-4">            
-                <label>CUIT :</label>
-                <input type="text" [(ngModel)]="medico.cuit" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="20398804050" required autofocus>
-            </div>
-
-            <div class="form-group col-md-4">            
-                <label>Matricula :</label>
-                <input type="text" [(ngModel)]="medico.matricula" [ngModelOptions]="{standalone: true}" class="form-control" placeholder="" required autofocus>
-            </div>
-
-            <div class="form-group col-md-4">            
-                <label>Hospital :</label>
-				<select [(ngModel)]="medico.hospital" [ngModelOptions]="{standalone: true}" class="form-control">
-					<option *ngFor="let hospital of hospitales">{{ hospital.nombre }}</option>
-				</select>
-            </div>
-
-            <div class="form-group col-md-4 field-label-responsive">            
-                <label>Email de acceso :</label>
-                 <input type="text" [(ngModel)]="medico.correo" name="correo" class="form-control" placeholder="you@Osme.com" required autofocus>
-
-            </div>
-
-           <div class="form-group col-md-4">            
-               <label >Especialidad :</label>
-	            <select class="form-control">
-    	            <option value="selec">seleccionar..</option>
-        	        <option value="Medicamento">Clinico</option>
-            	    <option value="Hospital">Traumatologo</option>
-                	<option value="Farmacia">Analisis</option>
-            	</select>
-			</div>
+<div class="container form-group col-lg-12">
+		<form [formGroup]="miFormulario" (ngSubmit)="onSubmit()">
+		  <div class="form-row">
+	  
 			<div class="form-group col-md-4">
-				<label>Contraseña :</label>
-				<input type="password" [(ngModel)]="medico.password" name="password" class="form-control" placeholder="password" required autofocus>
-			</div>
-			<div class="form-group col-md-4">	
-				<label>Confirmar contraseña :</label>
-				<input type="password" name="password2" class="form-control" placeholder="confirmar contraseña" required autofocus>			
+			  <label>Nombre y Apellido:</label>
+			  <input type="text" [(ngModel)]="medico.nombre" name="name" class="form-control" placeholder="Patricia Suarez"
+				[class.is-valid]="miFormulario.get('username').touched && miFormulario.get('username').valid"
+				[class.is-invalid]="miFormulario.get('username').touched && miFormulario.get('username').invalid"
+				formControlName="username" />
+			  <div *ngIf="miFormulario.get('username').errors && ( miFormulario.get('username').dirty || miFormulario.get('username').invalid)">
+				<small *ngIf=" miFormulario.get('username').hasError('required')" class="form-text text-muted ">Campo requerido</small>
+				<small *ngIf=" miFormulario.get('username').hasError('minlength')" class="form-text text-muted"> El nombre > a 3</small>
+			  </div>
 			</div>
 			<br>
+	  
+			<div class="form-group col-md-4">
+			  <label>Cuit:</label> 
+			  <input type="cuit" [(ngModel)]="medico.cuit" name="cuit" class="form-control" placeholder="20999872780"
+				[class.is-valid]="miFormulario.get('cuit').touched && miFormulario.get('cuit').valid"
+				[class.is-invalid]="miFormulario.get('cuit').touched && miFormulario.get('cuit').invalid"
+				formControlName="cuit" />
+			  <div *ngIf="miFormulario.get('cuit').errors && miFormulario.get('cuit').invalid">
+				<small *ngIf=" miFormulario.get('cuit').hasError('required')" class="form-text text-muted">Campo requerido</small>
+				<small *ngIf=" miFormulario.get('cuit').hasError('minlength')" class="form-text text-muted"> El cuit > a 5</small>
+				<small *ngIf=" miFormulario.get('cuit').hasError('pattern')" class="form-text text-muted"> El cuit contiene solo numeros</small>
+			  </div>
 			</div>
-			
-			<button type="submit" class="btn btn-primary btn-lg btn-block" (click)="saveNewMedico()" data-dismiss="modal" data-toggle="modal" data-target="#Guardarbtn">
-                  Guardar</button>
-		   	                    </div>
-
-</div>  
-
-<script type="text/javascript">
-
-$('#validateForm').bootstrapValidator({
-feedbackIcons: {
-	valid: 'glyphicon glyphicon-ok',
-	invalid: 'glyphicon glyphicon-remove',
-	validating: 'glyphicon glyphicon-refresh'
-},
-fields: {
-	name: {
-		validators: {
-			stringLength: {
-				min: 5,
-				message: 'Please Enter your Full name with minimum 5 letters length'
-			},
-			notEmpty: {
-				message: 'Please Enter your Full name'
-			}
-		}
-		},
-	correo: {
-		validators: {
-			stringLength: {
-				min: 15,
-				max: 100,
-				message:'Please enter at least 15 characters and no more than 100'
-			},
-			notEmpty: {
-				message: 'Please Enter Address'
-			}
-		}
-	}
-	}
-});
-	
-	
-</script>
-
+			<br>
+	  
+			<div class="form-group col-md-4">
+			  <label>Matricula: </label>
+			  <input type="matricula" class="form-control" placeholder="12345678" [(ngModel)]="medico.matricula" name="matricula"
+				[class.is-valid]="miFormulario.get('matricula').touched && miFormulario.get('matricula').valid"
+				[class.is-invalid]="miFormulario.get('matricula').touched && miFormulario.get('matricula').invalid"
+				formControlName="matricula" />
+			  <div *ngIf="miFormulario.get('matricula').errors && miFormulario.get('matricula').invalid">
+				<small *ngIf=" miFormulario.get('matricula').hasError('required')" class="form-text text-muted">Campo requerido</small>
+				<small *ngIf=" miFormulario.get('matricula').hasError('minlength')" class="form-text text-muted"> La matricula > a 5</small>
+				<small *ngIf=" miFormulario.get('matricula').hasError('pattern')" class="form-text text-muted"> La matricula contiene solo numeros</small>
+			  </div>
+			</div>
+			<br>
+	  
+			<div class="form-group col-md-4">
+			  <label>Correo:</label> 
+			  <input type="correo" class="form-control" placeholder="abc@osme.com" [(ngModel)]="medico.correo" name="correo"
+				[class.is-valid]="miFormulario.get('correo').touched && miFormulario.get('correo').valid"
+				[class.is-invalid]="miFormulario.get('correo').touched && miFormulario.get('correo').invalid"
+				formControlName="correo" />
+			  <div *ngIf="miFormulario.get('correo').errors && miFormulario.get('correo').invalid">
+				<small *ngIf=" miFormulario.get('correo').hasError('required')" class="form-text text-muted">Campo requerido</small>
+				<small *ngIf=" miFormulario.get('correo').hasError('email')" class="form-text text-muted"> Debe Respetar el formato abc@osme.com</small>
+			  </div>
+			</div>
+			<br>
+	  
+			<div class="form-group col-md-4">
+			  <label>Password:</label>
+			  <input type="password" class="form-control" [(ngModel)]="medico.password" name="password"
+				[class.is-valid]="miFormulario.get('password').touched && miFormulario.get('password').valid"
+				[class.is-invalid]="miFormulario.get('password').touched && miFormulario.get('password').invalid"
+				formControlName="password" />
+				<div *ngIf="miFormulario.get('password').errors && miFormulario.get('password').invalid">
+				  <small *ngIf=" miFormulario.get('password').hasError('required')" class="form-text text-muted">Campo requerida</small>
+				  <small *ngIf=" miFormulario.get('password').hasError('minlength')" class="form-text text-muted"> La Password = a 8</small>
+				  <small *ngIf=" miFormulario.get('password').hasError('pattern')" class="form-text text-muted"> La Password contiene solo letras</small>
+				</div>
+			  </div>
+			  <br>
+	  
+			<div class="form-group col-md-4">
+			  <label> Hospital:</label>
+			  <!--<input type="hospital" class="form-control" [(ngModel)]="medico.hospital" name="hospital"
+			  formControlName="hospital" /> -->
+			  <select formControlName="hospital" [(ngModel)]="medico.hospital" name="hospital" class="form-control">
+				<option selected>Seleccionar..</option>
+				<option *ngFor="let hospital of hospitales">{{ hospital.nombre }}</option>
+			  </select>
+			</div>
+			<br>
+	  
+			<div class="form-group col-md-4">
+			  <label> Especialidad:</label> 
+			  <select formControlName="especialidad" class="form-control" [(ngModel)]="medico.especialidad" name="especialidad">
+				<option selected>Seleccionar..</option>
+				<option> Clinico</option>
+				<option> Analisis</option>
+				<option> Traumatologo</option>
+			  </select>
+			</div>
+			<br>
+	  
+		  </div>
+		  <div>
+			<div class="col-md-2 col-xs-4">
+			  <button class="btn btn-primary btn-responsive" [disabled]="!miFormulario.valid" type="submit" 
+			  rounded="true" data-toggle="modal" data-target="#confirm-submit">
+				Enviar
+			  </button>
+			</div>
+			<div class="col-md-2 col-xs-4">
+			  <button type="reset" class="btn btn-primary btn-danger"
+					  ng-click="reset()">
+				Reset
+			  </button>
+			</div>
+		  </div>
+		</form>
+	  
+		<!-- Modal -->
+		<div class="modal fade " id="confirm-submit" tabindex="-1" role="dialog" 
+		aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog modal-notify modal-danger">
+			<div class="modal-content">
+			  <div class="container form-group col-lg-12">
+				<div>
+				  Médico
+				</div>
+				<div class="modal-body">
+	  
+				  <!-- We display the details entered by the user here -->
+				  <table class="table table-hover">
+					<tr>
+					  <th scope="col">  <p><b>Nombre y Apellido </b></p></th>
+					  <td id="lname">
+						<strong>{{miFormulario.value.username}} </strong>
+					  </td>
+					</tr>
+					<tr>
+					  <th>Cuit</th>
+					  <td id="fname">
+						<strong>{{miFormulario.value.cuit}} </strong>
+					  </td>
+					</tr>
+					<tr>
+					  <th>Matricula</th>
+					  <td id="fname">
+						<strong>{{miFormulario.value.matricula}} </strong>
+					  </td>
+					</tr>
+					<tr>
+					  <th>Correo</th>
+					  <td id="fname">
+						<strong>{{miFormulario.value.correo}} </strong>
+					  </td>
+					</tr>
+					<tr>
+					  <th>Hospital</th>
+					  <td id="fname">
+						<strong>{{miFormulario.value.hospital}} </strong>
+					  </td>
+					</tr>
+					<tr>
+					  <th>Especialidad</th>
+					  <td id="fname">
+						<strong>{{miFormulario.value.especialidad}} </strong>
+					  </td>
+					</tr>
+				  </table>
+	  
+				</div>
+			  </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
+				<button class="btn btn-primary" type="submit" rounded="true" data-toggle="modal" data-target="#modalConfirmDelete">Aceptar</button>
+			  </div>
+			</div>
+		  </div>
+		</div> <!-- Fin modal-->
+	  
+		<!--Modal: modalConfirmDelete-->
+		<div div class="modal fade " id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog modal-sm modal-notify modal-danger" role="document" >
+			<!--Content-->
+			<div class="modal-content text-center">
+			  <!--Header-->
+			  <div class="modal-header d-flex justify-content-center">
+				<p class="heading">Are you sure?</p>
+			  </div>
+	  
+			  <!--Body-->
+			  <div class="modal-body">
+				<i class="fas fa-spinner fa-pulse"></i>
+			  </div>
+	  
+			  <!--Footer-->
+			  <div class="modal-footer flex-center">
+				<a type="button" (click)="saveNewMedico()" class="btn btn-outline-danger">Yes</a>
+				<a type="button" class="btn btn-danger waves-effect" data-dismiss="modal">No</a>
+			  </div>
+			</div>
+			<!--/.Content-->
+		  </div>
+		</div>
+		<!--Modal: modalConfirmDelete-->
+	  </div>
+	  
